--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7737,14 +7737,38 @@ a.button {
   font-family: 'LatoLightItalic';
   src: url('../fonts/Lato-LightItalic.ttf') format('truetype'); }
 
+.error-container {
+  margin: 5px 0; }
+
+.error-container:last-child {
+  margin: 5px 0 0; }
+
+.error {
+  padding: 10px 16px;
+  font-size: 11px;
+  text-transform: uppercase;
+  color: #555;
+  vertical-align: middle; }
+
+.error i {
+  font-size: 24px;
+  color: #B83E2C;
+  vertical-align: middle; }
+
+.last-error-container > .error {
+  padding: 10px 16px 0; }
+
+.has-errors {
+  border-bottom: 3px solid #B83E2C; }
+
+.no-errors {
+  border-bottom: 3px solid green; }
+
 .light {
   background: #fff;
   color: #444; }
   .light a {
     color: #8f2b21; }
-
-.text-center {
-  text-align: center; }
 
 .pane, .view, .menu-left {
   background-image: url(../img/marriage-blur.jpg);
