--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -2,18 +2,35 @@
 	<ion-content class="user_form" id="signup_page" has-bouncing="false">
 		<div class="padding">
 			<img src="img/logo_tag_rev.png" class="logo" />
-			<form>
+			<form name="signupForm" novalidate="" ng-submit="signup(signupForm)">
+				<div class="list list-inset">
+					<div class="item item-input" ng-class="{ 'has-errors' : signupForm.first_name.$invalid && signupForm.$submitted, 'no-errors' : signupForm.first_name.$valid  && signupForm.$submitted}">
+						<input name="first_name" ng-model="User.first_name" type="text" placeholder="FIRST NAME" required />
+					</div>
+					<div class="form-errors" ng-show="signupForm.first_name.$error && signupForm.$submitted" ng-messages="signupForm.first_name.$error" ng-messages-include="templates/errors.html"></div>
+				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input ng-model="User.username" type="text" placeholder="USERNAME" />
+						<input name="last_name" ng-model="User.last_name" type="text" placeholder="LAST NAME" required />
+					</div>
+					<div class="form-errors" ng-show="signupForm.last_name.$error && signupForm.$submitted" ng-messages="signupForm.last_name.$error" ng-messages-include="templates/errors.html"></div>
+				</div>
+				<div class="list list-inset">
+					<div class="item item-input">
+						<input name="email" ng-model="User.email" type="text" placeholder="EMAIL" required />
 					</div>
 				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input ng-model="User.password" type="text" placeholder="PASSWORD" />
+						<input name="password" ng-model="User.password" type="text" placeholder="PASSWORD" required />
 					</div>
 				</div>
-				<input ng-click="signup()" type="submit" value="Create User" class="button button-block button-positive" />
+				<div class="list list-inset">
+					<div class="item item-input">
+						<input name="password_verify" ng-model="User.password_verify" type="text" placeholder="REPEAT PASSWORD" required />
+					</div>
+				</div>
+				<input type="submit" value="Create User" class="button button-block button-positive" />
 			</form>
 			<div class="text-center">
 				<a ui-sref="login">Return to login</a>
