setup for PK dev

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,6 +6,7 @@
 		<ion-refresher pulling-text="Pull to refresh..." on-refresh="update()"></ion-refresher>
 		<div class="padding">
 			HOME
+            <a ui-sref="login" class="button button-block button-positive">Login Page</a>
 		</div>
 	</ion-content>
 </ion-view>
