--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -25,5 +25,8 @@
 			Don't have an account?<br />
 			<a href="#" ui-sref="signup">Sign Up</a>
 		</div>
+        <div class="padding">
+            <a ui-sref="menu.tabs.home" class="button button-block button-positive">HOME</a>
+        </div>
 	</ion-content>
 </ion-view>
