--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,7 +22,7 @@
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">d</span> App Info</ion-item>
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">g</span> Profile</ion-item>
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">y</span> Notifications</ion-item>
-				<ion-item nav-clear="" menu-close="" ng-click="logout()"><span class="threeleaf">u</span> Log Out</ion-item>
+				<ion-item nav-clear="" menu-close="" href="#" ng-click="logout()"><span class="threeleaf">u</span> Log Out</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
