Added a ton of blank pages

--- a/www/templates/4steps.html
+++ b/www/templates/4steps.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="4 Steps">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			4 Steps
 		</div>
 	</ion-content>
 </ion-view>
