--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="About">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			About
 		</div>
 	</ion-content>
 </ion-view>
