--- a/www/templates/app_info.html
+++ b/www/templates/app_info.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="App Info">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			App Info
 		</div>
 	</ion-content>
 </ion-view>
