--- a/www/templates/lead_group.html
+++ b/www/templates/lead_group.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Lead Group">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Lead Group
 		</div>
 	</ion-content>
 </ion-view>
