--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,14 +15,14 @@
 		<ion-content>
 			<ion-list>
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">h</span> About Us</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">S</span> Find a Group</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">M</span> Lead a Group</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">R</span> Resources</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">G</span> Products</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">d</span> App Info</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">g</span> Profile</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">y</span> Notifications</ion-item>
-				<ion-item nav-clear="" menu-close="" href="#" ng-click="logout()"><span class="threeleaf">u</span> Log Out</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.find_group"><span class="threeleaf">S</span> Find a Group</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.lead_group"><span class="threeleaf">M</span> Lead a Group</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.resources"><span class="threeleaf">R</span> Resources</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.products"><span class="threeleaf">G</span> Products</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.app_info"><span class="threeleaf">d</span> App Info</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.profile"><span class="threeleaf">g</span> Profile</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.notifications"><span class="threeleaf">y</span> Notifications</ion-item>
+				<ion-item nav-clear="" menu-close="" ><a ng-click="logout()"><span class="threeleaf">u</span> Log Out</a></ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
