--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Products">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Products
 		</div>
 	</ion-content>
 </ion-view>
