--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Profile">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Profile
 		</div>
 	</ion-content>
 </ion-view>
