--- a/www/templates/quizzes.html
+++ b/www/templates/quizzes.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Quizzes">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Quizzes
 		</div>
 	</ion-content>
 </ion-view>
