--- a/www/templates/resources.html
+++ b/www/templates/resources.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Resources">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Resources
 		</div>
 	</ion-content>
 </ion-view>
