--- a/www/templates/decisions.html
+++ b/www/templates/decisions.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Decisions">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Decisions
 		</div>
 	</ion-content>
 </ion-view>
