--- a/www/templates/find_group.html
+++ b/www/templates/find_group.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Find Group">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Find Group
 		</div>
 	</ion-content>
 </ion-view>
