--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Cycles">
+<ion-view view-title="Notifications">
 	<ion-content>
 		<div class="padding">
-			Cycles
+			Notifications
 		</div>
 	</ion-content>
 </ion-view>
