--- a/www/templates/errors.html
+++ b/www/templates/errors.html
@@ -1,5 +1,5 @@
 <div class="error" ng-message="required">
-	<i class="ion-information-circled"></i>This field is required!</div>
+	This field is required!</div>
 <div class="error" ng-message="minlength">
 	<i class="ion-information-circled"></i>Minimum length of this field is 5 characters!</div>
 <div class="error" ng-message="maxlength">
