--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,21 +2,23 @@
 	<ion-content class="user_form" id="login_page" has-bouncing="false">
 		<div class="padding">
 			<img src="img/logo_tag_rev.png" class="logo" />
-			<form name="loginForm" ng-submit="login(loginForm)">
+			<form name="loginForm" novalidate="" ng-submit="login(loginForm)">
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input ng-model="User.email" name="email" type="text" placeholder="EMAIL" />
+						<input name="email" ng-model="loginUser.email" type="email" placeholder="EMAIL" required />
 					</div>
+					<div class="form-errors" ng-show="loginForm.email.$error && loginForm.$submitted" ng-messages="loginForm.email.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input ng-model="User.password" name="password" type="text" placeholder="PASSWORD" />
+						<input name="password" ng-model="loginUser.password" type="password" placeholder="PASSWORD" required />
 					</div>
+					<div class="form-errors" ng-show="loginForm.password.$error && loginForm.$submitted" ng-messages="loginForm.password.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<div class="text-right">
 					<a ui-sref="forgot">Forgot Password</a>
 				</div>
-				<input ng-click="login(loginForm)" type="submit" value="Sign In" class="button button-block button-positive" />
+				<input type="submit" value="Sign In" class="button button-block button-positive" />
 				<input ng-click="fblogin()" type="button" value="Use Facebook Login" class="button button-block button-dark" />
 				<input ng-click="fblogout()" type="button" value="Logout" class="button button-block button-dark" />
 			</form>
@@ -25,8 +27,5 @@
 			Don't have an account?<br />
 			<a href="#" ui-sref="signup">Sign Up</a>
 		</div>
-        <div class="padding">
-            <a ui-sref="menu.tabs.home" class="button button-block button-positive">HOME</a>
-        </div>
 	</ion-content>
 </ion-view>
