--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -5,30 +5,33 @@
 			<form name="signupForm" novalidate="" ng-submit="signup(signupForm)">
 				<div class="list list-inset">
 					<div class="item item-input" ng-class="{ 'has-errors' : signupForm.first_name.$invalid && signupForm.$submitted, 'no-errors' : signupForm.first_name.$valid  && signupForm.$submitted}">
-						<input name="first_name" ng-model="User.first_name" type="text" placeholder="FIRST NAME" required />
+						<input name="first_name" ng-model="signupUser.first_name" type="text" placeholder="FIRST NAME" required />
 					</div>
 					<div class="form-errors" ng-show="signupForm.first_name.$error && signupForm.$submitted" ng-messages="signupForm.first_name.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input name="last_name" ng-model="User.last_name" type="text" placeholder="LAST NAME" required />
+						<input name="last_name" ng-model="signupUser.last_name" type="text" placeholder="LAST NAME" required />
 					</div>
 					<div class="form-errors" ng-show="signupForm.last_name.$error && signupForm.$submitted" ng-messages="signupForm.last_name.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input name="email" ng-model="User.email" type="text" placeholder="EMAIL" required />
+						<input name="email" ng-model="signupUser.email" type="email" placeholder="EMAIL" required />
 					</div>
+					<div class="form-errors" ng-show="signupForm.email.$error && signupForm.$submitted" ng-messages="signupForm.email.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input name="password" ng-model="User.password" type="text" placeholder="PASSWORD" required />
+						<input name="password" ng-model="signupUser.password" type="password" placeholder="PASSWORD" required />
 					</div>
+					<div class="form-errors" ng-show="signupForm.password.$error && signupForm.$submitted" ng-messages="signupForm.password.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<div class="list list-inset">
 					<div class="item item-input">
-						<input name="password_verify" ng-model="User.password_verify" type="text" placeholder="REPEAT PASSWORD" required />
+						<input name="password_verify" ng-model="signupUser.password_verify" compare-to="signupUser.password" type="password" placeholder="REPEAT PASSWORD" required />
 					</div>
+					<div class="form-errors" ng-show="signupForm.password_verify.$error && signupForm.$submitted" ng-messages="signupForm.password_verify.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
 				<input type="submit" value="Create User" class="button button-block button-positive" />
 			</form>
