--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,7 +21,7 @@ $calm: #808184;
 $lightGrey: #d0d2d3;
 
 $font-bold: "LatoBold";
-$font-default: "LatoLight";
+$font-default: "HelveticaNeue";
 
 
 // The path for our ionicons font files, relative to the built CSS in www/css
