--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+	font-family: 'HelveticaNeue';
+	src: url('../fonts/HelveticaNeue.ttf') format('truetype');
+}
+
+@font-face {
 	font-family: 'LatoRegular';
 	src: url('../fonts/Lato-Regular.ttf') format('truetype');
 }
