--- a/www/templates/usness_personality.html
+++ b/www/templates/usness_personality.html
@@ -14,21 +14,21 @@
                 <div class="padding">
                     <hr>
                     <h3>Relating to People</h3>
-                    <input type="radio" name="personality.relating" value="extrovert">A People-Person, More Extroverted   <br>
-                    <input type="radio" name="personality.relating" value="introvert">Prefers One-on-One Time, More Introverted <br><br>
+                    <label><input type="radio" name="personality.relating" value="extrovert" ng-model="usness.personality.relating">A People-Person, More Extroverted   <br></label>
+                    <label><input type="radio" name="personality.relating" value="introvert" ng-model="usness.personality.relating">Prefers One-on-One Time, More Introverted <br><br></label>
                     <hr>
                     <h3>ACCOMPLISHING TASKS</h3>
-                    <input type="radio" name="personality.tasks" value="extrovert">More Orderly, Intentional, Prepared, Controlled  <br>
-                    <input type="radio" name="personality.tasks" value="introvert">More Flexible, Spontaneous, Easygoing, Adaptable <br><br>
+                    <label><input type="radio" name="personality.tasks" value="extrovert" ng-model="usness.personality.tasks">More Orderly, Intentional, Prepared, Controlled  <br></label>
+                    <label><input type="radio" name="personality.tasks" value="introvert" ng-model="usness.personality.tasks">More Flexible, Spontaneous, Easygoing, Adaptable <br><br></label>
                     <hr>
                     <h3>MAKING DECISIONS</h3>
-                    <input type="radio" name="personality.decisions" value="extrovert">Rational, Straightforward, Seek Justice, Certain  <br>
-                    <input type="radio" name="personality.decisions" value="introvert">Compassionate, Gentle, Cooperative, Lenient <br><br>
+                    <label><input type="radio" name="personality.decisions" value="extrovert" ng-model="usness.personality.relating">Rational, Straightforward, Seek Justice, Certain  <br></label>
+                    <label><input type="radio" name="personality.decisions" value="introvert" ng-model="usness.personality.relating">Compassionate, Gentle, Cooperative, Lenient <br><br></label>
                     <hr>
                     <h3>LEARNING INFORMATION</h3>
-                    <input type="radio" name="personality.learning" value="extrovert">Relying on Common Sense, Facts, History   <br>
-                    <input type="radio" name="personality.learning" value="introvert">Relying on Ideas, Theory, Possibilities <br><br>
-                    <input type="submit" value="Save and Continue" class="button button-block button-positive" />
+                    <label><input type="radio" name="personality.learning" value="extrovert" ng-model="usness.personality.relating">Relying on Common Sense, Facts, History   <br></label>
+                    <label><input type="radio" name="personality.learning" value="introvert" ng-model="usness.personality.relating">Relying on Ideas, Theory, Possibilities <br><br></label>
+                    <label><input type="submit" value="Save and Continue" class="button button-block button-positive" />
                     <button href="#" class="button button-block button-calm">Compare with Spouse</button>
 
                 </div>
